# pippy

./: .gitignore  LICENSE.txt  README.md  pippy.json  pyproject.toml  requirements.txt
lib/: pippy
src/pippy/: __about__.py  __init__.py  __main__.py  config.py  helpers.py  main.py
src/pippy/cli/: __init__.py
src/pippy/commands/: core.py  dev.py  qa.py
