[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pippy"
version = "1.0.2" # Match bash script version
description = "Lightweight 'npm-install & project manager' for Python projects"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" } # Choose your license
authors = [
    { name = "Kenny Bastani", email = "kennybastani@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",
    "Environment :: Console",
]
dependencies = [
    "typer[all]>=0.9.0", # Includes rich for nice output
    "requests>=2.20",   # Often useful, good default
    "openai>=1.3.0",    # For the 'ask' command
    "python-dotenv>=0.15.0", # Good for managing API keys if needed
]

# Optional dependencies for specific commands (users install manually or pippy installs them)
# pipreqs, pytest, flake8, black, isort, pip-audit, coverage, twine, build, sphinx, tensorflow (tricky)

[project.scripts]
pippy = "pippy.main:app"

[project.urls]
Homepage = "https://github.com/kbastani/pippy" # Example URL
Repository = "https://github.com/kbastani/pippy" # Example URL